Closed
Bug 1273729
Opened 9 years ago
Closed 9 years ago
dom/base/nsHostObjectProtocolHandler.cpp:217:29: error: use of undeclared identifier 'nsContentUtils' etc
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)
Details
Attachments
(1 file)
|
3.18 KB,
patch
|
birtles
:
review+
|
Details | Diff | Splinter Review |
I'm having some unified build errors in my local tree.
I've disabled some options, I don't know for sure which causes it exactly.
| Assignee | ||
Comment 1•9 years ago
|
||
This fixes it my tree.
Attachment #8753638 -
Flags: review?(bbirtles)
Comment 2•9 years ago
|
||
Comment on attachment 8753638 [details] [diff] [review]
fix
Review of attachment 8753638 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for fixing this!
Attachment #8753638 -
Flags: review?(bbirtles) → review+
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•