Bug 1273729 - Add some missing #includes and 'using' declarations to fix unified build errors.  r=bbirtles